# py_test

asarcar_package/: __init__.py
asarcar_package/utils/: __init__.py  check.py  file.py
google-python-exercises/: hello.py
google-python-exercises/babynames/: babynames.py
google-python-exercises/basic/: fcat.py  list1.py  list2.py  mimic.py  string1.py  string2.py  wordcount.py
google-python-exercises/copyspecial/: copyspecial.py
google-python-exercises/logpuzzle/: logpuzzle.py
gui/: gui.ipynb  maraudermap.py
my_pkg_files/: LICENSE  README.md  pyproject.toml
my_pkg_files/src/utils_asarcar/: __init__.py
my_pkg_files/src/utils_asarcar/utils/: __init__.py  check.py  file.py
part1/: ex.py  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex19.py  ex2.py  ex20.py  ex21.py  ex22.py  ex23.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  ip.txt  op.txt  svr.py
part2/: cards.txt  oo_con.py  set.py  vec.py  vop.py
tensorflow/: lp.ipynb  test.py
tensorflow/contrib/: Contrib.ipynb
tensorflow/handwriting/: HandWriting.ipynb
tensorflow/tools/: gpu_use_validate.py
utils_asarcar/: __init__.py
utils_asarcar/utils/: check.py
