[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"
[project]
name = "utils_asarcar"
version = "0.0.5"
authors = [
  { name="Arijit Sarcar", email="asarcar@gmail.com" },
]
description = "Common utilities package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/asarcar/"
Issues = "https://github.com/asarcar/issues"
